Add new files and update learning coach logic
Added new Jupyter notebook, text, and model files for speech NLP and sentence transformer. Updated advanced learning coach logic in AgentFlow notebooks and mouse/keyboard processing. Improved attention, break suggestion, and fatigue estimation functions. Updated requirements and frontend app for new features and integrations.

--- a/Keyboard_Mouse_Processing/requirementsMouseKybrd.txt
+++ b/Keyboard_Mouse_Processing/requirementsMouseKybrd.txt
@@ -15,6 +15,7 @@ pygetwindow>=0.0.9
 
 # Web Framework
 flask>=2.3.0
+flask-cors
 
 # System Libraries (Python ile birlikte gelir)
 # time, threading
